# OBLJudge

./: .env_example  README.md  bootstrap.sh  pyproject.toml
notebooks/: blogger.ipynb  final.ipynb  parser.ipynb  scraper.ipynb
results/: llm_grade_results.csv
src/agents/: __init__.py  base.py  judge.py
src/configs/: __init__.py  agent_config.py  model_config.yaml
src/outputs/: judge.py
src/parser/: parser.py
src/prompts/: judge.py
src/tools/: __init__.py  article.py  blogger.py
src/utils/: logger.py
