[project]
name = "obljudge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.7.0",
    "google-api-python-client>=2.147.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.1.0",
    "beautifulsoup4>=4.14.2",
    "newspaper3k>=0.2.8",
    "lxml-html-clean>=0.4.3",
]
